json files, md files

--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,192 @@
 {
  "items": [
   {
+    "id": "ooyrilW9S0Ot7gzHJCf1lg",
+    "url": "https://remote.co/job/spanish-teacher/",
+    "title": "Spanish Teacher",
+    "tags": [
+      "DBG:surround``4N( OR(virtual,distribut,scatter), OR(compani,team,OR(organ,organis)))",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "Apex Learning",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Oct 4, 2018 5:27:41 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>Spanish Teacher at <span>Apex Learning</span></h2><div><span><i></i> Remote</span>         | <span> Part-time </span></div><div>            <p>Apex Learning Virtual School PARTT01072<br><strong>Part-Time<br>Remote,US</strong><br>United States</p><p><strong>WHO WE ARE!</strong><br>Founded in 1997, Apex Learning is the leading provider of online high school solutions for the nation’s schools and families. There is simply no substitute for a quality education. At Apex Learning Virtual School, we are committed to providing an online learning experience that meets the highest academic standards of excellence. Since 1999, more than 1,000,000 students have successfully completed our courses to earn credits, prepare for college, and become inspired to learn.</p><p><strong>POSITION SUMMARY</strong><br>Apex Learning Virtual School is seeking a<strong>&nbsp;part-time&nbsp;</strong>Instructor. ALVS teachers provide timely and responsive communication with students, mentors, and coaches to enhance understanding of expectations, and provide targeted instruction feedback. The teacher will use a variety of tools to communicate with students, including e-mail, periodic telephone calls, moderation of online class discussions, posting announcements via the learning environment and periodic synchronous online sessions.</p><p><strong>Responsibilities:</strong></p><ul><li>Welcome students to course, communicate requirements, encourage participation, maintain available synchronous office hours, monitor student pacing and progress through course.</li><li>Facilitate a friendly instructionally rich online learning environment for ALVS (Apex Learning Virtual School) students.</li><li>Provide rich and targeted feedback on assignments within three business days of when the assignment was submitted.</li><li>Provides instructional resources to meet the needs of students with varying backgrounds, learning styles, and special needs.</li><li>Maintains an open line of communication with parents/guardians/school district mentors and personnel and seeks mentor and parental involvement when necessary.</li><li>Maintains confidentiality of student information and maintain timely records of student performance.</li><li>Respond to all student inquiries within one business day and turnaround of all assignments within three business days.</li><li>Participate in departmental team meeting.</li><li>Conduct virtual office hours, and provides other instructional support to students in adherence with the policies and procedures of the Apex Learning Virtual School.</li><li>Mentor and promote student academic progress and show an active interest in student achievement.</li></ul><p><strong>Qualifications:</strong></p><ul><li><strong>Bachelor’s Degree from a four-year college or university with preference to Master’s Degree</strong>.</li><li>Current Teacher certification in at least 1 state required, with preference towards ability to obtain other state teaching certificates.</li><li>6 years’ related education experience; at least 4 years teaching in a classroom preferred.</li><li>Knowledge and practical application of Spanish language learning pedagogy.</li><li>Ability to adhere to teaching obligations, including meeting deadlines, course schedules, and maintenance of teacher certification.</li><li>Ability to communicate effectively, both orally and in writing, with students, parents and other professionals.</li><li>Successful completion of subject endorsement area Praxis test.</li><li>Ability to apply and or hold multiple state teaching certifications.</li><li>Prefer candidates with experience teaching in online or blended environments.</li><li>Preference towards National Board Certification for Professional Teaching Standards.</li><li>Ability to pass a pre-employment background check.</li><li>Ability to pass a Social Security Administration E-Verify check for U.S. work authorization.</li></ul>        </div><div>        <a href='https://recruiting.ultipro.com/APE1004APXL/JobBoard/f95f558a-4bef-41a4-9801-f3fad0be4112/OpportunityDetail?opportunityId=5b15d7c0-913a-4ed7-83bd-2cba5053d121' rel='nofollow'>Apply for job</a>    </div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "h_-ZCx6bRa2m2qjqWpd_Dg",
+    "url": "https://news.ycombinator.com/item?id=18135434",
+    "title": "Product Hunt (YC S14) | Full time | REMOTE We love products, care about people, and thirst ...",
+    "tags": [
+      "DBG:surround``fulltim 4N remot",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Oct 4, 2018 12:45:07 AM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<span>Product Hunt (YC S14) | Full time | REMOTE<p>We love products, care about people, and thirst to build a community that celebrates making. Our distributed, tight-knit team is headquartered in SF.  We're looking for a few fine folks to join us:</p><p>Head of Social Media and News: <a href='https://angel.co/product-hunt/jobs/325616-head-of-social-media-and-news' rel='nofollow'>https://angel.co/product-hunt/jobs/325616-head-of-social-med...</a></p><p>Senior Full-Stack Engineer: <a href='https://angel.co/product-hunt/jobs/229499-senior-full-stack-engineer-sf-or-remote' rel='nofollow'>https://angel.co/product-hunt/jobs/229499-senior-full-stack-...</a></p><p>----------</p><p>️AngelList | Full time | REMOTE</p><p>Additionally, we're building a small, strong team to work on a new stealth project inside of AngelList. Our mission: to support startups, makers, and those building and shaping the future of tech.</p><p>Senior Full-Stack Engineer, Platform: <a href='https://angel.co/angellist/jobs/407418-senior-full-stack-engineer-platform-sf-or-remote' rel='nofollow'>https://angel.co/angellist/jobs/407418-senior-full-stack-eng...</a></p><p>Head of Community Marketing, Platform: <a href='https://angel.co/angellist/jobs/405764-head-of-community-marketing-platform' rel='nofollow'>https://angel.co/angellist/jobs/405764-head-of-community-mar...</a></p><p>Community Manager, Platform: <a href='https://angel.co/angellist/jobs/435059-community-manager-platform' rel='nofollow'>https://angel.co/angellist/jobs/435059-community-manager-pla...</a></p></span>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "M-iYcDDgRF-gu39uwIOYVg",
+    "url": "http://jobmote.com/jobs/26652-remote-webcenter-portal-developer-adf-consultant",
+    "title": "Remote Webcenter Portal Developer / ADF Consultant",
+    "tags": [
+      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
+      "DBG_TECH1:k/t/w:java-ee/java/13",
+      "DBG_TECH1:k/t/w:java/java/2",
+      "DBG_TECH1:k/t/w:java/mobile/1",
+      "DBG_TECH1:k/t/w:jsf/java/8",
+      "DBG_TECH1:k/t/w:weblogic/java/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=1, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=31, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/java",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "java"
+    ],
+    "hiringOrganization": {
+      "name": "TekStream Solutions, LLC",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Oct 3, 2018 9:20:27 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<div><div><div></div></div><div><div><div><p><strong>Job Title: Sr. Oracle ADF / WebCenter Consultant</strong></p><p><strong>Location: Remote</strong></p><p><strong>Duration: 6 to 8 Months</strong></p><p>Job Description:</p><ul><li>ADF application development skills</li><li>Good exp with ADF BC and ADF UI</li><li>Knowledge with Oracle WebCenter.</li><li>Oracle/WebLogic Portal 10g development.</li><li>Experience with building JSF/ADF Faces based portlets.</li><li>Must have hands on experience with JDeveloper 11g.</li><li>Prior Java J2ee lead/architect experience.</li><li>WebCenter application development skills by default with ADF expertise preferred.</li><li>WebCenterSuite 11g experience is preferred.</li></ul><p>Please send resumes to</p><ul><li>provided by Dice webcenter </li></ul></div></div><div></div></div></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "KATFQ6N2QgaXwBhTJHn6DQ",
+    "url": "https://news.ycombinator.com/item?id=18133566",
+    "title": "Code Ocean | Computational Research Meta-Researcher | New York City or remote (US/Canada) | Full-time | codeocean.com",
+    "tags": [
+      "DBG:surround``fulltim 4N remot",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Oct 3, 2018 8:58:07 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<span>Code Ocean | Computational Research Meta-Researcher | New York City or remote (US/Canada) | Full-time | codeocean.com<p>Code Ocean is a cloud-based computational reproducibility platform that enables researchers to run, publish, and share the code + data for their analyses, pipelines, and algorithms.</p><p>We're looking for a researcher (PhD preferred but not required) with a computational science background to join the product team. The role is research-focused: you will spend the bulk of your time keeping abreast with developments in the space, studying computational research tools, technologies, and workflows, and talking to scientists across different disciplines to learn how they work. The role is also cross-functional: you will be expected to disseminate knowledge internally, communicate findings and make recommendations, and support the other teams where appropriate. You should be an adaptable, self-motivated, organized individual who wants to advance the state of art in computational research.</p><p>Applicants from groups underrepresented in science and technology are strongly encouraged to apply. If you'd like to join our small yet rapidly growing team, please reach out directly to shahar at codeocean.com.</p></span>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "vdiVHvPPScWKZWNfjHDKqQ",
     "url": "https://remote.co/job/clinical-reviewer-2/",
     "title": "Clinical Reviewer",
