json files, md files

--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,147 @@
 {
  "items": [
   {
+    "id": "iBDPEl8FTni5jzWrRf0YAg",
+    "url": "http://jobmote.com/jobs/26932-remote-adp-autopay-field-implementation-consultant",
+    "title": "REMOTE :: ADP Autopay Field Implementation Consultant",
+    "tags": [
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "KPG99 INC",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Oct 6, 2018 1:21:26 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<div><div><div></div></div><div><div><div><p><strong>REMOTE</strong></p><p><strong>Role: ADP Autopay Field Implementation Consultant</strong></p><p><strong>Location : Roseland, NJ or Alpharetta, GA.</strong></p><p><strong>Contract</strong></p><p><strong>Ps/ Skype</strong></p><p>This is a long term contract.</p><p>We are looking for a candidate with extensive knowledge of ADP Autopay-</p><p>Field Implementation who understands how to implement a new client</p><p>How to Configure a new client into Autopay System. - provided by Dice </p></div></div><div></div></div></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "eAR9ZYJ7ThqyjhUOtPy10g",
+    "url": "http://jobmote.com/jobs/26901-senior-sap-fico-consultant-onsite-remote",
+    "title": "Senior SAP FICO Consultant (onsite & remote)",
+    "tags": [
+      "DBG:surround``OR(fulltim,offer) 5W 2N(work,remot)",
+      "DBG:surround``remot 6W OR(dai,daili,week,weekli,month,monthli) 5W OR(offic,headquart,onsit)",
+      "REMOTE1/50",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "50% remote",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "GlobalSource IT",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Oct 6, 2018 7:21:34 AM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<div><div><div></div></div><div><div><div><p>We currently have a direct client in Mt. Pleasant, SC who is looking for a Senior SAP FICO Consultant for a 12 month contract role. This position is an immediate need, we can offer some remote work (first month onsite, possibly 50% remote after) and travel expenses will be reimbursed by our customer.</p><p><strong>Job Details:</strong></p><p>Our client would like someone who has strong FICO configuration, testing and support experience but who has also worked with Collections Management extensively. Experience working with payment services and either Paymetric or Concur is required. Prior Blackline experience is preferred.</p><p>If you are interested, please send me your resume along with a phone number and time when we can speak. Also, if you have any additional questions please contact me and I'll get back to you in a timely manner. I can be reached at or at .</p><ul><li>provided by Dice SAP FICO; Configuration; Testing; Collections Management; Blackline; Concur; Paymetric </li></ul></div></div><div></div></div></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "m_39LLeNTw2FFlZ74L5qDg",
+    "url": "https://stackoverflow.com/jobs/163596/remote-senior-2010-sharepoint-developer-surge?a=SRD9yZqRfH2",
+    "title": "REMOTE Senior 2010 SharePoint Developer- Consulting skills required at Surge  ",
+    "tags": [
+      "DBG:surround``OR(locat, anywher, base, resid) 7W usa",
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:less/frontend/5",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=5}",
+      "REMOTE1/100",
+      "TECH1/frontend",
+      "TITLE1/unknown",
+      "TZ/America"
+    ],
+    "tagsNames1": [
+      "American time zones",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "frontend"
+    ],
+    "hiringOrganization": {
+      "name": "Surge",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Oct 5, 2018 7:06:11 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2><span>REMOTE Senior 2010 SharePoint Developer- Consulting skills required</span>                </h2>                    <h3>About this job</h3>                    <div>                            <div>                                    <div>                                        <span>Job type: </span>                                        <span>Contract</span>                                    </div>                                    <div>                                        <span>Experience level: </span>                                        <span>Senior, Lead</span>                                    </div>                                    <div>                                        <span>Role: </span>                                        <span>Full Stack Developer</span>                                    </div>                            </div>                            <div>                                    <div>                                        <span>Industry: </span>                                        <span>Software Development</span>                                    </div>                                    <div>                                        <span>Company size: </span>                                        <span>201-500 people</span>                                    </div>                                    <div>                                        <span>Company type: </span>                                        <span>Private</span>                                    </div>                            </div>                    </div>                <div>Company: Surge | No office location<br></div><h3>Technologies</h3><div></div><div>sharepoint-2010</div><div>sharepoint</div>                <h3>Job description</h3>                <div><p>Surge Forward is looking for a smart, self-motivated, experienced, senior-level remote developer&nbsp;to work as a long-term independent contractor.</p><p>Experience Required:</p><p>2010 SharePoint and consulting skills</p><p><strong>Must be located&nbsp;in the US or Canada to be considered for this role. Sorry, No Visas.</strong></p><p><strong>Resume must include the tech stack under each job.</strong></p><p>For immediate consideration, email resume and include your cell phone number and start date: <a href='mailto:dsanderson@surgeforward.com' rel='nofollow'>dsanderson@surgeforward.com</a></p>                </div>            <div>        <a href='https://stackoverflow.com/jobs/apply/163596?reset=False&amp;ra=SRD9yZqRfH2&amp;oqs=a%3DSRD9yZqRfH2' rel='nofollow'>Apply now</a></div>            <h3>About Surge</h3>            <div><p>Surge is an onshore provider of custom web, cloud, mobile, digital, and desktop software development and consulting services to clients in every industry, from hot startups to Fortune 500 companies.<br><br>Founded in 2007, and listed on the Inc. 5000 list of America’s fastest growing companies for five straight years, Surge has successfully delivered hundreds of software products, apps, and solutions to its clients using a proven agile/scrum development process combined with an elite group of North American software professionals.<br><br>Simply put, Surge offers America’s best software engineers, on demand, at rates 30-50% less than the competition.</p>            </div>                            <h3>Benefits</h3>                    <ul>                            <li>                                <span></span>                                <span>Great Pay</span>                            </li>                            <li>                                <span></span>                                <span>Choose Your Hours</span>                            </li>                            <li>                                <span></span>                                <span>Work From Home</span>                            </li>                            <li>                                <span></span>                                <span>Work With Happy People</span>                            </li>                            <li>                                <span></span>                                <span>Zero Commute</span>                            </li>                            <li>                                <span></span>                                <span>See Your Family More</span>                            </li>                            <li>                                <span></span>                                <span>Travel While You Work</span>                            </li>                            <li>                                <span></span>                                <span>Software Provided</span>                            </li>                    </ul>                ",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "39jsn7DgR1et9FArv6xD_w",
     "url": "https://remote.co/job/certified-aod-group-counselor/",
     "title": "Certified AOD Group Counselor",
